--- a/src/App/Easel/ColorTree/ColorTree.scss
+++ b/src/App/Easel/ColorTree/ColorTree.scss
@@ -1,10 +1,13 @@
 div#tree {
-  background-color: #fdd;
+  background-color: white;
+
   overflow-y: scroll;
   position: relative;
   z-index: 0;
   width: 95%;
-  height: 100%;
+  height: 92%;
+  padding: 0 2%;
+  padding-top: 13%;
 }
 div#treeCtrl {
   top: 0;
