--- a/src/App/Easel/Easel.scss
+++ b/src/App/Easel/Easel.scss
@@ -2,5 +2,5 @@ div.tunersBox {
   position: relative;
 
   width: 100%;
-  height: 35%;
+  height: 38%;
 }
