--- a/src/App/Easel/FormatSlider/FormatSlider.scss
+++ b/src/App/Easel/FormatSlider/FormatSlider.scss
@@ -2,11 +2,9 @@ div.slidersBox {
   position: relative;
 
   width: 100%;
-  height: 85%;
+  height: 80%;
 
   margin: 0 auto;
-
-  background-color: #fdd;
 
   display: flex;
   flex-direction: row;
@@ -23,7 +21,8 @@ div.slidersBox {
 
     display: flex;
     flex-direction: column;
-    background-color: pink;
+    background-color: white;
+    box-shadow: inset 0 0 7px 3px #ddd;
 
     &.colorListBox {
       width: 30%;
