--- a/src/App/Easel/Hex/HexTuner.scss
+++ b/src/App/Easel/Hex/HexTuner.scss
@@ -1,16 +1,18 @@
 .hexBox {
   position: relative;
 
-  width: 10%;
+  width: 15%;
   height: 15%;
 
   margin: 0 auto;
   border-radius: 10px;
-  border: 5px solid var(--secondary-active-color);
-  background-color: var(--primary-active-color);
+  box-shadow: inset 0 0 5px 2px #ccc;
+  //border: 5px solid var(--secondary-active-color);
+  background-color: white;
 
   display: flex;
   align-items: center;
+  justify-content: center;
 
   input {
     position: inherit;
@@ -19,6 +21,8 @@
     text-align: center;
     border: none;
     color: var(--secondary-active-color);
+    background-color: var(--primary-active-color);
+    border-radius: 7px;
     font-family: var(--primary-font);
     font-size: 20px;
 
