--- a/src/App/Palette/Palette.scss
+++ b/src/App/Palette/Palette.scss
@@ -1,14 +1,20 @@
 div.paletteBox {
   position: relative;
 
-  width: 95%;
-  height: 65%;
+  width: 98%;
+  height: 60%;
 
-  margin: 0 auto;
+  margin: 1% auto;
+
+  border-radius: 10px;
+
+  box-shadow: inset 0 0 10px 3px #ccc;
 
   display: flex;
   flex-direction: row;
   justify-content: center;
+
+  overflow: auto;
 
   align-items: center;
 
@@ -53,7 +59,7 @@ div.paletteBox {
     }
 
     &.downloadBtn {
-      bottom: 0;
+      bottom: 5%;
       right: 0;
       overflow: visible;
       svg {
